@startuml

title __MAIN ACTIVITY's Class Diagram__\n

package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.adapter {
    class BookDataAdapter {
      - myBorrowedBookList : List<BookListItem>
      - myOwnedBookList : List<BookListItem>
      {static} - instance : BookDataAdapter
      {static} + getInstance()
      - BookDataAdapter()
      + getMyBorrowedBooksList()
      + getMyOwnedBooksList()
      - fetchMyBorrowedBooksList()
      - fetchMyOwnedBooksList()
      - userBooksToBookList()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.controller {
    class UserController {
      - auth : FirebaseAuth
      - database : FirebaseDatabase
      {static} - instance : UserController
      - UserController()
      {static} + getInstance()
      + isAuthenticated()
      + authenticate()
      + deauthenticate()
      + createUser()
      + getMyId()
      - getUserEmail()
      + getUserProfile()
      + getMyProfile()
      + updateMyProfile()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
    class MessagesFragment {
      - chatRoomList : List<ChatRoomItem>
      - profileImageMap : Map<String, RoundedBitmapDrawable>
      - activity : Activity
      - chatRoomListRef : DatabaseReference
      - chatListener : ValueEventListener
      - adapter : ChatRecyclerViewAdapter
      - imageController : ImageController
      + onAttach()
      + onCreate()
      + onCreateView()
      + onResume()
      + onStop()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment.exchange {
      class ExchangeFragment {
        + onCreateView()
        - setupViewPager()
        + onClick()
        + onResume()
      }
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment.library {
      class LibraryFragment {
        + onCreateView()
        - setupViewPager()
        + onClick()
      }
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.activity {
    class MainActivity {
      - fetching : boolean
      - bookDataObserver : Observer
      - bookDataAdapter : BookDataAdapter
      - userController : UserController
      # onCreate()
      # onDestroy()
      # onStart()
      - loadFragment()
      + onNavigationItemSelected()
      # onResume()
      + onProfileButtonClick()
      + isFetching()
    }
  }
}

MainActivity "1" -- "1" ExchangeFragment : creates >
MainActivity "1" -- "1" LibraryFragment : creates >
MainActivity "1" -- "1" MessagesFragment : creates >
MainActivity -up-|> OnNavigationItemSelectedListener
MainActivity -up-|> AppCompatActivity
MainActivity o-- "1" UserController
MainActivity o-- "1" BookDataAdapter

right footer


  PlantUML diagram partly generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
  For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
